language/move-lang/tests/move_check/translated_ir_tests/move/borrow_tests/imm_borrow_on_mut_trivial_invalid.exp
error[E07002]: mutable ownership violated
   ┌─ tests/move_check/translated_ir_tests/move/borrow_tests/imm_borrow_on_mut_trivial_invalid.move:12:41
   │
10 │         let returned_ref = bump_and_give(x_ref);
   │                            -------------------- It is still being borrowed by this reference
11 │         // ERROR Cannot mutably borrow from `x_ref` it is being borrowed by `returned_ref`
12 │         assert(*returned_ref == *freeze(&mut x_ref.f) + 1, 42);
   │                                         ^^^^^^^^^^^^ Invalid mutable borrow at field 'f'.

